Add popover help for form fields

--- a/frontend/groups.html
+++ b/frontend/groups.html
@@ -13,7 +13,7 @@
         <main class="flex-1 p-6">
             <h1 class="text-2xl font-semibold mb-4">Manage Groups</h1>
             <form id="group-form" class="space-y-4">
-                <label class="block">Group Name<br><input type="text" id="group-name" class="border p-2 rounded w-full"></label>
+                <label class="block">Group Name<br><input type="text" id="group-name" class="border p-2 rounded w-full" data-help="Name for the group"></label>
                 <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded">Create Group</button>
             </form>
             <h2 class="text-xl font-semibold mt-6 mb-2">Existing Groups</h2>
@@ -21,6 +21,7 @@
         </main>
     </div>
     <script src="js/menu.js"></script>
+    <script src="js/input_help.js"></script>
     <script>
 async function loadGroups() {
     const res = await fetch('../php_backend/public/groups.php');
