--- a/frontend/categories.html
+++ b/frontend/categories.html
@@ -13,7 +13,7 @@
         <main class="flex-1 p-6">
             <h1 class="text-2xl font-semibold mb-4">Manage Categories</h1>
             <form id="category-form" class="space-y-4">
-                <label class="block">Category Name<br><input type="text" id="category-name" class="border p-2 rounded w-full"></label>
+                <label class="block">Category Name<br><input type="text" id="category-name" class="border p-2 rounded w-full" data-help="Name for the category"></label>
                 <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded">Create Category</button>
             </form>
             <h2 class="text-xl font-semibold mt-6 mb-2">Existing Categories</h2>
@@ -21,6 +21,7 @@
         </main>
     </div>
     <script src="js/menu.js"></script>
+    <script src="js/input_help.js"></script>
     <script>
 async function loadCategories() {
     const res = await fetch('../php_backend/public/categories.php');
