--- a/frontend/monthly_dashboard.html
+++ b/frontend/monthly_dashboard.html
@@ -14,10 +14,10 @@
         <main class="flex-1 p-6">
             <h1 class="text-2xl font-semibold mb-4">Monthly Dashboard</h1>
             <label for="year-select" class="block">Year:
-                <select id="year-select" class="border p-2 rounded w-full"></select>
+                <select id="year-select" class="border p-2 rounded w-full" data-help="Select year"></select>
             </label>
             <label for="month-select" class="block mt-2">Month:
-                <select id="month-select" class="border p-2 rounded w-full"></select>
+                <select id="month-select" class="border p-2 rounded w-full" data-help="Select month"></select>
             </label>
 
             <div id="totals" class="mt-4 space-y-1">
@@ -43,6 +43,7 @@
         </main>
     </div>
     <script src="js/menu.js"></script>
+    <script src="js/input_help.js"></script>
     <script src="https://unpkg.com/tabulator-tables@5.5.0/dist/js/tabulator.min.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script>
