--- a/frontend/monthly_statement.html
+++ b/frontend/monthly_statement.html
@@ -15,10 +15,10 @@
             <h1 class="text-2xl font-semibold mb-4">Monthly Statement</h1>
             <form id="statement-form" class="space-y-4">
                 <label for="year" class="block">Year:
-                    <select id="year" name="year" class="border p-2 rounded w-full"></select>
+                    <select id="year" name="year" class="border p-2 rounded w-full" data-help="Select year"></select>
                 </label>
                 <label for="month" class="block">Month:
-                    <select id="month" name="month" class="border p-2 rounded w-full"></select>
+                    <select id="month" name="month" class="border p-2 rounded w-full" data-help="Select month"></select>
                 </label>
                 <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded">View</button>
             </form>
@@ -26,6 +26,7 @@
         </main>
     </div>
     <script src="js/menu.js"></script>
+    <script src="js/input_help.js"></script>
     <script src="https://unpkg.com/tabulator-tables@5.5.0/dist/js/tabulator.min.js"></script>
 <script>
 const monthSelect = document.getElementById('month');
