--- a/frontend/transaction.html
+++ b/frontend/transaction.html
@@ -15,6 +15,7 @@
         </main>
     </div>
     <script src="js/menu.js"></script>
+    <script src="js/input_help.js"></script>
     <script>
     const params = new URLSearchParams(window.location.search);
     const id = params.get('id');
@@ -40,9 +41,9 @@
                 <p><strong>Description:</strong> ${tx.description}</p>
                 <p><strong>Memo:</strong> ${tx.memo || ''}</p>
                 <p><strong>Amount:</strong> £${parseFloat(tx.amount).toFixed(2)}</p>
-                <label class="block">Category: <select id="category" class="border p-2 rounded w-full"></select></label>
-                <label class="block">Tag: <select id="tag" class="border p-2 rounded w-full"></select></label>
-                <label class="block">Group: <select id="group" class="border p-2 rounded w-full"></select></label>
+                <label class="block">Category: <select id="category" class="border p-2 rounded w-full" data-help="Assign a category"></select></label>
+                <label class="block">Tag: <select id="tag" class="border p-2 rounded w-full" data-help="Assign a tag"></select></label>
+                <label class="block">Group: <select id="group" class="border p-2 rounded w-full" data-help="Assign a group"></select></label>
                 <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded">Save</button>
             `;
             container.appendChild(form);
