--- a/frontend/upload.html
+++ b/frontend/upload.html
@@ -13,14 +13,14 @@
         <main class="flex-1 p-6">
             <h1 class="text-2xl font-semibold mb-4">Upload OFX File</h1>
             <form action="../php_backend/public/upload_ofx.php" method="POST" enctype="multipart/form-data" class="space-y-4">
-                <input type="file" name="ofx_file" accept=".ofx" required class="block w-full">
+                <input type="file" name="ofx_file" accept=".ofx" required class="block w-full" data-help="Select an OFX file to upload">
                 <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded">Upload</button>
             </form>
         </main>
     </div>
 
     <script src="js/menu.js"></script>
-
+    <script src="js/input_help.js"></script>
     <script src="js/overlay.js"></script>
     <script>
 const uploadForm = document.querySelector("form");
