--- a/frontend/yearly_dashboard.html
+++ b/frontend/yearly_dashboard.html
@@ -14,7 +14,7 @@
         <main class="flex-1 p-6">
             <h1 class="text-2xl font-semibold mb-4">Yearly Dashboard</h1>
             <label for="year-select" class="block">Year:
-                <select id="year-select" class="border p-2 rounded w-full"></select>
+                <select id="year-select" class="border p-2 rounded w-full" data-help="Select year to display"></select>
             </label>
 
             <h2 class="text-xl font-semibold mt-6 mb-2">Tag Totals</h2>
@@ -34,6 +34,7 @@
         </main>
     </div>
     <script src="js/menu.js"></script>
+    <script src="js/input_help.js"></script>
     <script src="https://unpkg.com/tabulator-tables@5.5.0/dist/js/tabulator.min.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script>
