--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
             <p>Select an option from the menu to get started.</p>
             <p id="version">Version: loading...</p>
 
-            <section class="mt-8">
+            <section class="mt-8 bg-white p-6 rounded shadow">
                 <h2 class="text-xl font-semibold mb-4">What You Can Do</h2>
                 <ul class="list-disc pl-5 space-y-2">
                     <li>Upload OFX files to import your bank statements.</li>
