Allow uploading multiple OFX files

--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -6,7 +6,7 @@
     <h3 class="text-lg font-semibold mb-2">Overview</h3>
     <ul class="space-y-2">
       <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="index.html"><i class="fa-solid fa-house mr-2"></i> Home</a></li>
-      <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="upload.html"><i class="fa-solid fa-upload mr-2"></i> Upload OFX File</a></li>
+      <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="upload.html"><i class="fa-solid fa-upload mr-2"></i> Upload OFX Files</a></li>
     </ul>
   </div>
 
