Add memo column to Missing Tags table

--- a/frontend/missing_tags.html
+++ b/frontend/missing_tags.html
@@ -33,6 +33,7 @@
                 initialSort: [{column:'count', dir:'desc'}],
                 columns: [
                     { title: 'Description', field: 'description' },
+                    { title: 'Memo', field: 'memo' },
                     { title: 'Count', field: 'count', hozAlign: 'right', sorter: 'number' },
                     { title: 'Action', formatter: () => '<button class="bg-blue-600 text-white px-2 py-1 rounded">Auto Tag</button>', width: 120, align: 'center', cellClick: async (e, cell) => {
                         const desc = cell.getRow().getData().description;
